[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentrafficenv"
version = "0.1.0"
description = "Multi-agent traffic signal control environment exposed via an HTTP API (FastAPI)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AlphaBetaGamma"}]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "openai>=1.0.0",
]

[tool.setuptools]
py-modules = []
