[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentrafficenv"
version = "0.1.0"
description = "Multi-agent traffic signal control environment exposed via an HTTP API (FastAPI)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AlphaBetaGamma"}]
dependencies = [
  "fastapi>=0.111.0",
  "openenv-core>=0.2.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["models"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "server*", "simulator*"]
